// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Listbox /> should render with no highlighted <Option /> 1`] = `
<option
  aria-selected="false"
  class="styles__Option-sc-am72ib-0 fZyPDg"
  id="listbox-item-0"
  role="option"
  value="option A"
>
  option A
</option>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 2`] = `
<option
  aria-selected="false"
  class="styles__Option-sc-am72ib-0 fZyPDg"
  id="listbox-item-1"
  role="option"
  value="option B"
>
  option B
</option>
`;

exports[`<Listbox /> should render with no highlighted <Option /> 3`] = `
<option
  aria-selected="false"
  class="styles__Option-sc-am72ib-0 fZyPDg"
  id="listbox-item-2"
  role="option"
  value="option C"
>
  option C
</option>
`;
